Fixed the wrapping issue on the navigation and geomap buttons.

--- a/packages/client-mav/src/app/make-a-vis/legend-view/main/main.component.sass
+++ b/packages/client-mav/src/app/make-a-vis/legend-view/main/main.component.sass
@@ -9,9 +9,18 @@
     margin-left: 3rem
     margin-right: 2.6875rem
 
+    ::ng-deep .mat-button-toggle
+      width: 7.5rem
+
+    .button
+      height: 6rem
+      line-height: 1.6rem
+      white-space: pre-wrap
+
     .label
       font-size: 1.25rem
-      
+      font-family: 'Paytone One'
+
     .home-icon-wrapper
       cursor: pointer
       display: flex
@@ -52,7 +61,8 @@
         font-size: 15px
 
         .legend-name
-          font-size: 20px
+          font-size: 1.25rem
+          font-family: 'Paytone One'
           margin-left: 1rem
 
         .icon
